--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "scripts"]
 	path = scripts
-	url = git@github.com:mandel59/mplus_scripts.git
+	url = https://github.com/mandel59/mplus_scripts.git
